--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
 		"php": ">=5.2"
 	},
 	"autoload": {
-		"psr-0": { "Readability//": "" }
-	}
+		"psr-4": {
+			"Readability\\": "./"
+		}
+	},
 }
